# YC-Analyzed

./: .env.example  .gitignore  1_get_urls.py  2_get_yc_data.py  3_statistics.py  LICENSE  README.md  YC_URLs.csv  YC_batches.csv  _next steps.md  _project vision.txt  crawl4ai test.py  generate_charts.py  get_urls.py  get_yc_data.py  language_model.py  pyproject.toml  requirements.txt  run_pipeline.py  run_yc_pipeline.py
api/: Dockerfile  README.md  requirements-api.txt  run_api_local.py
api/src/: main.py
archived/: 1_get_yc_batches.py  get_yc_data_pw.py
data/: YC_Batches.csv
data/2024-10-06/: YC_URLs.csv
data/2024-11-02/: YC_Directory.csv  YC_Directory_Analysis.xlsx  YC_URLs.csv
data/2024-11-16/: YC_Companies.csv  YC_Directory_Analysis.xlsx  YC_Founders.csv  YC_URLs.csv
data/2025-01-26/: YC_URLs.csv
data/2025-02-01/: YC_Companies.csv  YC_Founders.csv  YC_URLs.csv
data/2025-03-10/: YC_URLs.csv  (+2 more)
other/: tech-crunch-ai.py  tech-crunch.py  test-arun-many-urls.py
scraper/: run_pipeline.py
src/: arun-many-test.py  generate_charts.py  generate_statistics.py  get_yc_data.py  get_yc_urls.py
yc_data/: YC_Companies_IK12.csv  YC_Companies_S05.csv  YC_Companies_S06.csv  YC_Companies_S07.csv  YC_Companies_S13.csv  YC_Companies_S15.csv  YC_Companies_S17.csv  YC_Companies_S18.csv  YC_Companies_W07.csv  YC_Companies_W08.csv  YC_Companies_W09.csv  YC_Companies_W10.csv  YC_Companies_W11.csv  YC_Companies_W12.csv  YC_Companies_W13.csv  YC_Companies_W14.csv  YC_Companies_W16.csv  YC_Companies_W18.csv  YC_Companies_W22.csv  YC_Directory.csv  YC_Directory_Analysis.xlsx
(+29 files in other folders)
