[project]
name = "yc-vault"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instructor[litellm]==1.6.3",
    "litellm==1.48.0",
    "markdownify>=0.14.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "reflex>=0.5.3",
    "selenium==4.25.0",
]
